Covid tracker fixed

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="flexbox-column timeline-container column-twothird pad-30 mt-30">
-                    <div class="flexbox-column pad-30 timeline-item aifs" style="margin-top: -86px;">
+                    <div class="flexbox-column pad-30 timeline-item aifs first-timeline-item">
                         <h2 class="mono-font">&#127874;</h2>
                         <span class="timeline-year">2002</span>
                     </div>
@@ -182,13 +182,38 @@
                 <span class="bio-text mbt-10 pad-20">
                     I've been doing web development (using the Django-Postgres stack) since September, 2020, and I finished and sold my first web-app in June, 2021.
                 </span>
-<!--                <span class="bio-text mbt-10 pad-20">-->
-<!--                    I now aim to transition towards machine learning on the web.-->
-<!--                </span>-->
             </div>
         </div>
 
-        <div class="flexbox-column page pad-30 page-2">
+<!--        <div class="flexbox-row page-experience">-->
+<!--            <div class="flexbox-column column-half pad-30"></div>-->
+<!--            <div class="flexbox-column column-half aic pad-30" id="work-timeline-container">-->
+<!--                <h1 class="big decorative-heading mb-50">Experience</h1>-->
+<!--                <div class="timeline-container flexbox-column column-twothird center pad-30 mt-30">-->
+<!--                    <div class="flexbox-column pad-30 timeline-item aifs first-timeline-item">-->
+<!--                        <h2 class="mono-font">Google Summer of Code</h2>-->
+<!--                        <span class="timeline-category">Django Software Foundation</span>-->
+<!--                        <span class="timeline-year">April 2022 - July 2022</span>-->
+<!--                        <span class="timeline-comment">-->
+<!--                            The COEP webteam is responsible for maintaining the college website and handling the servers-->
+<!--                            on-premises.-->
+<!--                        </span>-->
+<!--                    </div>-->
+
+<!--                    <div class="flexbox-column pad-30 timeline-item aifs last-timeline-item">-->
+<!--                        <h2 class="mono-font">COEP Webteam</h2>-->
+<!--                        <span class="timeline-year">December 2021 - Present</span>-->
+<!--                        <span class="timeline-comment">-->
+<!--                            The COEP webteam is responsible for maintaining the college website and handling the servers-->
+<!--                            on-premises.-->
+<!--                        </span>-->
+<!--                    </div>-->
+
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+        <div class="flexbox-column page pad-30 page-projects">
             <h1 class="mt-30 ml-30 big decorative-heading" id="projects">Projects</h1>
             <div class="flexbox-row pad-10 project-container">
                 <div class="flexbox-row pad-50 mar-20 project">
