--- a/index.html
+++ b/index.html
@@ -48,8 +48,26 @@
         </script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
         <script src="js/mjxgui.min.js"></script>
+
+        <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
+        <script type="text/javascript" src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
     </head>
     <body>
+        <div id="delete-confirm-dialog" class="flexbox-column pad-30 hidden">
+            <span class="note-close-button">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <line x1="18" y1="6" x2="6" y2="18" />
+                  <line x1="6" y1="6" x2="18" y2="18" />
+                </svg>
+            </span>
+            <span class="mb-10 mt-30">Are you sure you want to delete this note?</span>
+            <input type="submit" value="Yes, delete it." class="mbt-10 error-button" id="delete-confirm-button" data-delete-url="">
+            <div class="flexbox-row ajc error-container mt-10 hidden">
+                <span class="donutSpinner smallSpinner space-lr"></span>
+                <span>Deleting</span>
+            </div>
+        </div>
         <div class="page" style="overflow: hidden; max-height: 100vh;">
             <div class="flexbox-column ajc header-bar">
             <span id="header-text" class="flexbox-column ajc">
@@ -466,6 +484,65 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
+<!--                        <img src="images/classberg-logo.svg" alt="ClassBerg" width="100px" height="125px">-->
+                    </div>
+                    <div class="flexbox-column project-content">
+                        <h2 class="big mbt-10">LifeNotes</h2>
+                        <span class="project-desc">
+                            LifeNotes is a timeline web-app that allows you to record key moments in your life with
+                            specific "notes". You can give notes different tags to sort them and find them faster.
+                        </span>
+                        <span class="project-desc">
+                            It shows you an interactive timeline with all the notes you want to see so you can visualize
+                            your progress and easily keep track of events.
+                        </span>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                                  <line x1="10" y1="14" x2="20" y2="4" />
+                                  <polyline points="15 4 20 4 20 9" />
+                                </svg>
+                                <span class="space-lr"><a href="http://notes.hrus.in" target="_blank">notes.hrus.in</a></span>
+                            </span>
+                        </span>
+                        <span class="flexbox-row mt-10 flair">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                              <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                              <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                              <line x1="11" y1="6" x2="11" y2="6.01" />
+                              <line x1="13" y1="18" x2="13" y2="18.01" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-javascript" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M7.5 8h3v8l-2 -1" />
+                              <path d="M16.5 8h-2.5a0.5 .5 0 0 0 -.5 .5v3a0.5 .5 0 0 0 .5 .5h1.423a0.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-html5" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-css3" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                            </svg>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="timeline-demo" id="timeline-demo-1">
+
+                </div>
+                <div id="note-card-container" class="card-hidden-left"></div>
             </div>
             <h1 class="mt-30 ml-30 big decorative-heading" id="work">Work & Study</h1>
             <div class="flexbox-row pad-10 project-container">
@@ -739,4 +816,5 @@
             MathJax.typesetPromise([tr]).then(() => {})
         });
     </script>
+    <script src="js/timeline.js"></script>
 </html>
