Added mobile element notices

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                 <span class="bio-text mbt-10 pad-20">
                     I've been doing web development (using the Django-Postgres stack) since September, 2020, and I finished and sold my first web-app in June, 2021.
                 </span>
+                <span class="bio-text mbt-10 pad-20 message-warning-dark mobile-element">
+                    This website has much more to offer you if you open it on a device with a big screen :)
+                </span>
             </div>
         </div>
 
@@ -432,7 +435,10 @@
                             rendering using tools like MathJax.
                         </span>
                         <span class="project-desc">
-                            Try the demo below and create an equation. Note that MJXGUI does not work well with mobile devices yet.
+                            Try the demo below and create an equation.
+                        </span>
+                        <span class="project-desc message-warning-dark mobile-element">
+                            MJXGUI is still in beta and does not support all of its features on mobile devices yet.
                         </span>
                         <span class="flexbox-row pad-10 project-links">
                             <span class="flexbox-row ajc link">
@@ -499,6 +505,9 @@
                             It shows you an interactive timeline with all the notes you want to see so you can visualize
                             your progress and easily keep track of events.
                         </span>
+                        <span class="project-desc message-warning-dark mobile-element">
+                            The LifeNotes timeline works best on desktop devices or big screens.
+                        </span>
                         <span class="flexbox-row pad-10 project-links">
                             <span class="flexbox-row ajc link">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -508,6 +517,15 @@
                                   <polyline points="15 4 20 4 20 9" />
                                 </svg>
                                 <span class="space-lr"><a href="http://notes.hrus.in" target="_blank">notes.hrus.in</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-down" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <line x1="12" y1="5" x2="12" y2="19" />
+                                  <line x1="18" y1="13" x2="12" y2="19" />
+                                  <line x1="6" y1="13" x2="12" y2="19" />
+                                </svg>
+                                <span class="space-lr"><a href="#timeline-demo-1">Demo</a></span>
                             </span>
                         </span>
                         <span class="flexbox-row mt-10 flair">
