--- a/index.html
+++ b/index.html
@@ -79,18 +79,20 @@
                     <div class="variable-text" id="before">
                         <div id="left-wrapper">
                             <span class="before-link hidden link-no-opacity" data-site="instagram" data-link-id="1" data-side="left"><a
-                                    href="https://instagram.com/hrushikeshrv">instagram.com/</a></span>
+                                    href="https://instagram.com/hrushikeshrv" target="_blank">instagram.com/</a></span>
                             <span class="before-link active" data-site="github" data-link-id="3" data-side="left"><a
                                     href="https://github.com/hrushikeshrv" target="_blank">github.com/</a></span>
                             <span class="before-link hidden link-no-opacity" data-site="linkedin" data-link-id=2" data-side="left"><a
-                                    href="https://linkedin.com/in/hrushikeshrv">linkedin.com/in/</a></span>
+                                    href="https://linkedin.com/in/hrushikeshrv" target="_blank">linkedin.com/in/</a></span>
                         </div>
                     </div>
                     <div class="fixed-text"><a href="https://github.com/hrushikeshrv" target="_blank" id="fixed-link">hrushikeshrv</a></div>
                     <div class="variable-text" id="after">
                         <div id="right-wrapper">
-                            <span class="after-link hidden link-no-opacity" data-site="gmail" data-link-id="1" data-side="right">@gmail.com</span>
-                            <span class="after-link hidden link-no-opacity" data-site="classberg" data-link-id="2" data-side="right">@classberg.com</span>
+                            <span class="after-link hidden link-no-opacity" data-site="gmail" data-link-id="1" data-side="right"><a
+                                    href="mailto:hrushikeshrv@gmail.com" target="_blank">@gmail.com</a></span>
+                            <span class="after-link hidden link-no-opacity" data-site="classberg" data-link-id="2" data-side="right"><a
+                                    href="mailto:hrushikeshrv@classberg.com" target="_blank">@classberg.com</a></span>
                         </div>
                     </div>
                 </div>
@@ -639,6 +641,55 @@
                                 <span class="space-lr"><a href="https://docs.google.com/document/d/e/2PACX-1vQiIbawhPSDwLr4rJ2lmZRRm_CRoCyskeMOsaTOeek8Yf6KJ5-8zMKXU7isc2wnd9duRTzWbhNgjOOJ/pub" target="_blank">webpage</a></span>
                             </span>
                         </span>
+                    </div>
+                </div>
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
+                        <img src="images/django-logo-negative.svg" alt="Django" width="100" height="124">
+                    </div>
+                    <div class="flexbox-column project-content">
+                        <h2 class="big mbt-10">hrushikeshrv/<br>django</h2>
+                        <span class="project-desc">
+                            A repository of my contributions to <a class="a" href="https://github.com/django/django" target="_blank">django</a>.
+                            Django is a web-framework that encourages rapid development with clean design.
+                        </span>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/django/django" target="_blank">django/django</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/hrushikeshrv/django" target="_blank">hrushikeshrv/django</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/django/django/pulls?q=mentions%3Ahrushikeshrv+" target="_blank">my pull requests</a></span>
+                            </span>
+                        </span>
+                        <div class="flexbox-row mt-10 flair">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                                <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                                <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                                <line x1="11" y1="6" x2="11" y2="6.01" />
+                                <line x1="13" y1="18" x2="13" y2="18.01" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-open-source" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 3a9 9 0 0 1 3.618 17.243l-2.193 -5.602a3 3 0 1 0 -2.849 0l-2.193 5.603a9 9 0 0 1 3.617 -17.244z" />
+                            </svg>
+                        </div>
                     </div>
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
