--- a/index.html
+++ b/index.html
@@ -563,6 +563,64 @@
                 </div>
 
                 <div class="timeline-demo" id="timeline-demo-1">
+                    <div id="timeline-controls-tippy" class="hidden">
+                        <div class="flexbox-column pad-10 aifs">
+                            <h1 class="mbt-10">Controls</h1>
+                            <span class="flexbox-row ajc">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                    <line x1="5" y1="12" x2="19" y2="12" />
+                                    <line x1="5" y1="12" x2="9" y2="16" />
+                                    <line x1="5" y1="12" x2="9" y2="8" />
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right space-lr" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                    <line x1="5" y1="12" x2="19" y2="12" />
+                                    <line x1="15" y1="16" x2="19" y2="12" />
+                                    <line x1="15" y1="8" x2="19" y2="12" />
+                                </svg>
+                                <span>Drag the timeline left and right</span>
+                            </span>
+                            <span class="flexbox-row ajc mobile-element">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-horizontal" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <polyline points="7 8 3 12 7 16" />
+                                  <polyline points="17 8 21 12 17 16" />
+                                  <line x1="3" y1="12" x2="21" y2="12" />
+                                </svg>
+                                <span>Pinch to zoom</span>
+                            </span>
+                            <span class="flexbox-row ajc mobile-hide">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-horizontal space-lr" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <polyline points="7 8 3 12 7 16" />
+                                  <polyline points="17 8 21 12 17 16" />
+                                  <line x1="3" y1="12" x2="21" y2="12" />
+                                </svg>
+                                <span>Press ctrl + scroll to zoom</span>
+                            </span>
+                            <span class="flexbox-row ajc">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-click space-lr" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <line x1="3" y1="12" x2="6" y2="12" />
+                                  <line x1="12" y1="3" x2="12" y2="6" />
+                                  <line x1="7.8" y1="7.8" x2="5.6" y2="5.6" />
+                                  <line x1="16.2" y1="7.8" x2="18.4" y2="5.6" />
+                                  <line x1="7.8" y1="16.2" x2="5.6" y2="18.4" />
+                                  <path d="M12 12l9 3l-4 2l-2 4l-3 -9" />
+                                </svg>
+                                <span>Click on a note to read more</span>
+                            </span>
+                        </div>
+                    </div>
+                    <span id="timeline-control-help">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-help" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <circle cx="12" cy="12" r="9" />
+                          <line x1="12" y1="17" x2="12" y2="17.01" />
+                          <path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
+                        </svg>
+                    </span>
 
                 </div>
                 <div id="note-card-container" class="card-hidden-left"></div>
@@ -605,6 +663,54 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
+                        <img src="images/django-logo-negative.svg" alt="Django" width="100" height="124">
+                    </div>
+                    <div class="flexbox-column project-content">
+                        <h2 class="big mbt-10">hrushikeshrv/<br>django</h2>
+                        <span class="project-desc">
+                            A repository of my contributions to <a class="a" href="https://github.com/django/django" target="_blank">django</a>.
+                        </span>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/django/django" target="_blank">django/django</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/django/django/pulls?q=mentions%3Ahrushikeshrv+" target="_blank">my pull requests</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/hrushikeshrv/django" target="_blank">my fork</a></span>
+                            </span>
+                        </span>
+                        <div class="flexbox-row mt-10 flair">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                                <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                                <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                                <line x1="11" y1="6" x2="11" y2="6.01" />
+                                <line x1="13" y1="18" x2="13" y2="18.01" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-open-source" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 3a9 9 0 0 1 3.618 17.243l-2.193 -5.602a3 3 0 1 0 -2.849 0l-2.193 5.603a9 9 0 0 1 3.617 -17.244z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
                         <img src="images/mitocw.svg" alt="MIT OCW Logo" width="100" height="100">
                     </div>
                     <div class="flexbox-column project-content">
@@ -614,6 +720,7 @@
                         </span>
                         <div class="project-desc">
                             <ul>
+                                <li>6.004 - Computation Structures</li>
                                 <li>6.006 - Introduction to Algorithms</li>
                                 <li>6.042J - Mathematics for Computer Science</li>
                                 <li>6.046J - Design and Analysis of Algorithms</li>
@@ -641,55 +748,6 @@
                                 <span class="space-lr"><a href="https://docs.google.com/document/d/e/2PACX-1vQiIbawhPSDwLr4rJ2lmZRRm_CRoCyskeMOsaTOeek8Yf6KJ5-8zMKXU7isc2wnd9duRTzWbhNgjOOJ/pub" target="_blank">webpage</a></span>
                             </span>
                         </span>
-                    </div>
-                </div>
-                <div class="flexbox-row pad-50 mar-20 project">
-                    <div class="flexbox-column">
-                        <img src="images/django-logo-negative.svg" alt="Django" width="100" height="124">
-                    </div>
-                    <div class="flexbox-column project-content">
-                        <h2 class="big mbt-10">hrushikeshrv/<br>django</h2>
-                        <span class="project-desc">
-                            A repository of my contributions to <a class="a" href="https://github.com/django/django" target="_blank">django</a>.
-                            Django is a web-framework that encourages rapid development with clean design.
-                        </span>
-                        <span class="flexbox-row pad-10 project-links">
-                            <span class="flexbox-row ajc link">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                                </svg>
-                                <span class="space-lr"><a href="https://github.com/django/django" target="_blank">django/django</a></span>
-                            </span>
-                            <span class="flexbox-row ajc link">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                                </svg>
-                                <span class="space-lr"><a href="https://github.com/hrushikeshrv/django" target="_blank">hrushikeshrv/django</a></span>
-                            </span>
-                            <span class="flexbox-row ajc link">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                                </svg>
-                                <span class="space-lr"><a href="https://github.com/django/django/pulls?q=mentions%3Ahrushikeshrv+" target="_blank">my pull requests</a></span>
-                            </span>
-                        </span>
-                        <div class="flexbox-row mt-10 flair">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
-                                <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
-                                <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
-                                <line x1="11" y1="6" x2="11" y2="6.01" />
-                                <line x1="13" y1="18" x2="13" y2="18.01" />
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-open-source" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <path d="M12 3a9 9 0 0 1 3.618 17.243l-2.193 -5.602a3 3 0 1 0 -2.849 0l-2.193 5.603a9 9 0 0 1 3.617 -17.244z" />
-                            </svg>
-                        </div>
                     </div>
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
@@ -833,6 +891,12 @@
                 delay: 0,
                 duration: [300, 50],
                 theme: 'blue-gradient',
+            })
+            const template = document.querySelector('#timeline-controls-tippy').innerHTML;
+            tippy('#timeline-control-help', {
+                content: template,
+                allowHTML: true,
+                trigger: 'click',
             })
         </script>
     </body>
