--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                         <img src="images/mitocw.svg" alt="MIT OCW Logo" width="100" height="100">
                     </div>
                     <div class="flexbox-column project-content">
-                        <h2 class="big mbt-10">MIT OCW Notes</h2>
+                        <h2 class="big mbt-10">MIT Open CourseWare Notes</h2>
                         <span class="project-desc">
                             A Google Doc containing my notes for all the MIT OCW courses I have taken, updated daily.
                         </span>
