Changed timeline tippy trigger

--- a/index.html
+++ b/index.html
@@ -896,7 +896,8 @@
             tippy('#timeline-control-help', {
                 content: template,
                 allowHTML: true,
-                trigger: 'click',
+                trigger: 'click mouseenter',
+                hideOnClick: true,
             })
         </script>
     </body>
