Updated project card colors

--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
                 <span class="bio-text mbt-10 pad-20">
                     I've been doing web development (using the Django-Postgres stack) since September, 2020, and I finished and sold my first web-app in June, 2021.
                 </span>
+                <span class="bio-text mbt-10 pad-20">
+                    Everyday I'm learning more about <a href="https://ocw.hrus.in" class="a" target="_blank">computer science and programming</a>
+                    and working on projects of my own.
+                </span>
                 <span class="bio-text mbt-10 pad-20 message-warning-dark mobile-element">
                     This website has much more to offer you if you open it on a device with a big screen :)
                 </span>
