--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                 </div>
             </div>
             <div class="footer-bar flexbox-row">
-                <div class="flexbox-column ajc logo" data-site="github">
+                <button class="flexbox-column ajc logo" data-site="github">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                     </svg>
                     <span>GitHub</span>
-                </div>
-                <div class="flexbox-column ajc logo" data-site="linkedin">
+                </button>
+                <button class="flexbox-column ajc logo" data-site="linkedin">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <rect x="4" y="4" width="16" height="16" rx="2" />
@@ -119,8 +119,8 @@
                         <path d="M16 16v-3a2 2 0 0 0 -4 0" />
                     </svg>
                     <span>LinkedIn</span>
-                </div>
-                <div class="flexbox-column ajc logo" data-site="instagram">
+                </button>
+                <button class="flexbox-column ajc logo" data-site="instagram">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <rect x="4" y="4" width="16" height="16" rx="4" />
@@ -128,16 +128,16 @@
                         <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
                     </svg>
                     <span>Instagram</span>
-                </div>
-                <div class="flexbox-column ajc logo" data-site="gmail">
+                </button>
+                <button class="flexbox-column ajc logo" data-site="gmail">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-at" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <circle cx="12" cy="12" r="4" />
                         <path d="M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28" />
                     </svg>
                     <span>Email</span>
-                </div>
-                <div class="flexbox-column ajc logo" data-site="classberg">
+                </button>
+                <button class="flexbox-column ajc logo" data-site="classberg">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-globe" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <circle cx="12" cy="10" r="4" />
@@ -146,7 +146,7 @@
                         <line x1="8" y1="22" x2="16" y2="22" />
                     </svg>
                     <span>ClassBerg</span>
-                </div>
+                </button>
             </div>
         </div>
 
