--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                     I've been doing web development (using the Django-Postgres stack) since September, 2020, and I finished and sold my first web-app in June, 2021.
                 </span>
                 <span class="bio-text mbt-10 pad-20">
-                    Everyday I'm learning more about <a href="https://ocw.hrus.in" class="a" target="_blank">computer science and programming</a>
-                    and working on projects of my own.
+                    Everyday, I learn more about <a href="https://ocw.hrus.in" class="a" target="_blank">computer science and programming</a>
+                    and work on projects of my own.
                 </span>
                 <span class="bio-text mbt-10 pad-20 message-warning-dark mobile-element">
                     This website has much more to offer you if you open it on a device with a big screen :)
@@ -850,7 +850,7 @@
                               <circle cx="17.5" cy="17.5" r="2.5" />
                               <line x1="19.5" y1="19.5" x2="22" y2="22" />
                             </svg>
-                            <span class="space-lr"><a href="https://hrus.in/covid" target="_blank">hrus.in/covid</a></span>
+                            <span class="space-lr"><a href="covid/index.html" target="_blank">hrus.in/covid</a></span>
                         </span>
                     </div>
                 </div>
@@ -867,7 +867,7 @@
                               <path d="M7.5 8h3v8l-2 -1" />
                               <path d="M16.5 8h-2.5a0.5 .5 0 0 0 -.5 .5v3a0.5 .5 0 0 0 .5 .5h1.423a0.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
                             </svg>
-                            <span class="space-lr"><a href="https://hrus.in/raycasting.html" target="_blank">hrus.in/raycasting</a></span>
+                            <span class="space-lr"><a href="raycasting/index.html" target="_blank">hrus.in/raycasting</a></span>
                         </span>
                         <span class="flexbox-row ajc link">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
