working on new projects view

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
         <div class="flexbox-column page pad-30 page-projects">
             <h1 class="mt-30 ml-30 big decorative-heading" id="projects">Projects</h1>
-            <span class="mbt-10 pad-10" id="project-navbar">
+            <span class="mbt-10 pad-10 flexbox-row aic jcfs" id="project-navbar">
 
             </span>
 
