Added quick nav

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flexbox-column column-half pad-50 ajc bio">
+            <div class="flexbox-column column-half pad-50 ajc" id="bio">
                 <span class="bio-text mbt-10 pad-20">
                     I'm an electronics engineering student at the
                     <a class="a" href="https://www.google.com/search?q=college of engineering, pune" target="_blank">College of Engineering, Pune</a>,
@@ -243,6 +243,13 @@
 <!--                </div>-->
 <!--            </div>-->
 <!--        </div>-->
+
+        <nav id="quick-nav" class="flexbox-row jcc aifs">
+            <span class="section-link"><a href="#bio">Bio</a></span>
+            <span class="section-link"><a href="#projects">Projects</a></span>
+            <span class="section-link"><a href="#work">Work/Study</a></span>
+            <span class="section-link"><a href="#mini-projects">Mini Projects</a></span>
+        </nav>
 
         <div class="flexbox-column page pad-30 page-projects">
             <h1 class="mt-30 ml-30 big decorative-heading" id="projects">Projects</h1>
@@ -484,7 +491,7 @@
                     </div>
                 </div>
             </div>
-            <h1 class="decorative-heading mt-30 ml-30">Mini-Projects</h1>
+            <h1 class="decorative-heading mt-30 ml-30" id="mini-projects">Mini-Projects</h1>
             <div class="flexbox-row pad-10 project-container">
                 <div class="flexbox-column pad-30 mar-20 mini-project">
                     <h2>Fitness Tracker</h2>
