Created CardRenderer for work cards

--- a/index.html
+++ b/index.html
@@ -355,6 +355,14 @@
             <div id="note-card-container" class="card-hidden-left"></div>
 
             <h1 class="mt-30 ml-30 big decorative-heading" id="work">Work & Study</h1>
+            <div>
+                <span class="mbt-10 pad-10 flexbox-row aic jcfs" id="work-navbar">
+
+                </span>
+                <div class="flexbox-row pad-10 project-container" id="work-card-container">
+
+                </div>
+            </div>
             <div class="flexbox-row pad-10 project-container">
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
@@ -702,7 +710,8 @@
         </script>
         <script src="js/timeline.js"></script>
         <script src="data/project-data.json" type="application/json" id="project-data"></script>
-        <script src="js/project-renderer.js"></script>
+        <script src="data/work-data.json" type="application/json" id="work-data"></script>
+        <script src="js/card-renderer.js"></script>
         <script src="https://unpkg.com/@popperjs/core@2"></script>
         <script src="https://unpkg.com/tippy.js@6"></script>
         <script>
