Made photo responsive

--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@
                 <a href="https://resume.hrus.in">Resume</a>
             </span>
         </nav>
-        <div class="page" style="height: 100vh;">
-            <div class="flexbox-column column-half pad-30 jcc aife full-height">
+        <div class="page flexbox-row" style="height: 100vh;">
+            <div class="flexbox-column column-half pad-30 jcc full-height" id="name-card">
                 <div class="flexbox-column aifs mb-50">
+
+                    <img src="" alt="Hrushikesh Vaidya" width="80%" id="my-photo-mobile" class="center">
+
                     <h1 class="mt-30 nametag" style="margin-bottom: 0;">Hrushikesh</h1>
                     <h1 class="mb-30 nametag" style="margin-top: 0;">Vaidya</h1>
                     <div class="flexbox-row ajc mono-font">
@@ -153,6 +156,9 @@
                     </div>
                 </div>
             </div>
+            <div class="flexbox-column column-half pad-30 jcc full-height">
+                <img src="" alt="Hrushikesh Vaidya" width="80%" id="my-photo-large-screen" class="mobile-hide">
+            </div>
         </div>
 
         <div class="flexbox-row page about">
@@ -189,7 +195,7 @@
                     I've been doing web development (using the Django-Postgres stack) since September 2020, and I finished and sold my first web app in June 2021.
                 </span>
                 <span class="bio-text mbt-10 pad-20">
-                    Every day, I learn more about <a href="https://ocw.hrus.in" class="a" target="_blank">computer science and programming</a>
+                    Every day, I learn more about <a href="https://hrus.in/ocw" class="a" target="_blank">computer science and programming</a>
                     and work on projects of my own.
                 </span>
                 <span class="bio-text mbt-10 pad-20 message-warning-dark mobile-element">
